# Upside_down_RM_Application

./: README.md  install_env.sh  pyproject.toml
Volve/: 1project_wavefield_processed.ipynb  2volve_sep_rec.ipynb  3volve_sep_src_deghosting.ipynb  5raymckimaging_upd_volve.ipynb
Volve/.ipynb_checkpoints/: 3volve_sep_src_deghosting-checkpoint.ipynb
Volve/subroutine/: imaging_upd_sparse_l2.py  raymarchenko_upd_sparse.py  raymarchenko_upd_sparse_l2.py  raymarchenko_upd_vv.py  wavefieldsepforp.py
notebooks/: 1project_wavefield_processed.ipynb  2volve_sep_rec.ipynb  3volve_sep_src_deghosting.ipynb  5raymckimaging_upd_volve.ipynb
udrm/: anglegather.py  imaging.py  imaging_upd_sparse.py  marchenko.py  raymarchenko.py  raymarchenko_upd.py  wavefieldsep.py
